--- a/todo.txt
+++ b/todo.txt
@@ -1,2 +1,3 @@
 1. create an action.ts and fetch the data from the url
 modify action to return more than the first element from the api
+image error since the image is comming from the url needs to be fixed.
